// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render StyledLink component with custom colors. 1`] = `
<MockedLink>
  <span
    className="StyledLink__StyledLinkWrapper-sc-1ft1soa-0 ghYzfT"
  />
</MockedLink>
`;

exports[`Render StyledLink component with default colors. 1`] = `
<MockedLink>
  <span
    className="StyledLink__StyledLinkWrapper-sc-1ft1soa-0 erOdDR"
  />
</MockedLink>
`;
